step by step, now pdf

--- a/LeanCourse/ProjectWinding/logbook.tex
+++ b/LeanCourse/ProjectWinding/logbook.tex
@@ -13,7 +13,7 @@
 
 % Title and Author Information
 \title{Winding Number of a Curve - LEAN4 Project (Logbook)}
-\author{Jorque Carrasco Coquillat \and
+\author{Jorge Carrasco Coquillat \and
 Juan Antonio Montalbán Vidal}
 \date{\today} % Use \date{} to leave the date empty or set a custom date
 
@@ -30,16 +30,35 @@ decisions made and main difficulties we have had to tackle.
 \end{abstract}
 
 % Sections
-\section{Introduction}
-This is the introduction section. You can include text, equations, and more.
+\section{Choosing our project topic}
+There were various options that seemed good for us, from Carmichael numbers
+to orientability of manifolds. Lastly, we decided to work in a complex analysis topic:
+the winding number.
 
-\section{Main Content}
+The winding number of a curve can be defined in several ways, although we only
+focused on the topological and analytic ones. Our main goal was going to be
+to prove the equivalence between these definitions, albeit we quickly noticed
+it was going to be a very stretch goal due to its complexity and the time we had.
+
+Since this project focuses on the definition and properties of the winding number,
+we will now give the definition of \textit{curve} that we have used - there is no a general
+consensus on how to define them, especially regarding the definition interval.
+
+For us, a curve $\gamma$ will be a $\cal{C}^1 (I, \mathbb{C})$ function, where I stands for the unit interval.
+
+\begin{itemize}
+  \item \textbf{Topological definition:} it uses the path-lifting property [ref]. Given
+  a curve $\gamma$
+  \item \textbf{Analytic definitions:} seguir
+\end{itemize}
+
+\section{Main difficulties}
 Here is the main content of the article.
 
 \subsection{Subsection Example}
 This is a subsection.
 
-\section{Conclusion}
+\section{Conclusion and possible future work}
 This is the conclusion of the article.
 
 % References
